<resources>
    <string name="app_name">TDM-Android</string>
    <string name="select">Select size of items</string>
    <string name="character_name">Arya Stark</string>
    <string name="character_gender">Famale</string>
    <string name="character_description">
        Princess Arya Stark is the third child and second daughter of Lord Eddard Stark
        and his wife, Lady Catelyn Stark. She is the sister of the incumbent Westerosi monarchs,
        Sansa, Queen in the North, and Brandon, King of the Andals and the First Men.
    </string>
    <string name="txtSelect">Select</string>
    <string name="enterUsername">Enter Username</string>
    <string name="enterPassword">Enter Password</string>
    <string name="checkRememberMe">Remember me</string>
    <string name="btnCreateUser">Create user</string>
    <string name="txtLogIn">Login</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="enterEmail">Enter Email</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="update_profile">Update Profile</string>
    <string name="add_favourite">Add to favourites</string>

    <string name="menu_open">Open</string>
    <string name="menu_close">Close</string>
</resources>