<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".activities.RegisterActivity">

    <ImageView
        android:id="@+id/character_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/got"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/register"
        android:layout_gravity="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/enterUsername"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="@color/gray"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/purple_700"
                app:boxStrokeWidth="0dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/enterEmail"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="@color/gray"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/purple_700"
                app:boxStrokeWidth="0dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/enterPassword"
                android:textColorHint="@color/white"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/white"
                app:boxBackgroundColor="@color/gray"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/purple_700"
                app:boxStrokeWidth="0dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/confirmPassword"
                android:textColorHint="@color/white"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/white"
                app:boxBackgroundColor="@color/gray"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/purple_700"
                app:boxStrokeWidth="0dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/register"
                android:width="140dp"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/purple_700"
                android:text="@string/register" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_an_account"
                    android:textSize="18sp"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtLogIn"
                    android:textSize="18sp"
                    android:textColor="@color/purple_700"
                    android:textStyle="bold"
                    android:layout_marginStart="6dp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>