<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:background="@color/black"
    tools:context=".activities.LoginActivity">

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:text="@string/txtLogIn"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enterUsername"
        android:textColorHint="@color/white"
        app:endIconTint="@color/white"
        app:boxBackgroundColor="@color/gray"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNameUser"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:boxBackgroundColor="@color/gray"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enterPassword"
        android:textColorHint="@color/white"
        app:endIconTint="@color/white"
        app:boxBackgroundColor="@color/gray"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword"
            android:inputType="textPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:boxBackgroundColor="@color/gray" />
    </com.google.android.material.textfield.TextInputLayout>



    <CheckBox
        android:id="@+id/checkRememberUser"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/checkRememberUser" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="2dp">

        <Button
            android:id="@+id/createUser"
            android:width="140dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginEnd="3dp"
            android:text="@string/btnCreateUser" />

        <Button
            android:id="@+id/logIn"
            android:width="140dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginStart="3dp"
            android:text="@string/txtLogIn" />

    </LinearLayout>

    <ImageView
        android:id="@+id/character_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/got"
        android:scaleType="centerCrop"/>

</LinearLayout>