<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/got"
    tools:context=".activities.CreateUserActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:paddingTop="30dp"
        android:textColor="@color/white"
        android:text="@string/txtDataToRegister"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/enterUsername"
                android:textColorHint="@color/white"
                app:endIconTint="@color/white"
                app:boxBackgroundColor="@color/gray"
                app:boxStrokeWidth="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNameUser"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    app:boxBackgroundColor="@color/gray"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/enterEmail"
                android:textColorHint="@color/white"
                app:endIconTint="@color/white"
                app:boxBackgroundColor="@color/gray"
                app:boxStrokeWidth="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEmail"
                    android:inputType="textEmailAddress"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    app:boxBackgroundColor="@color/gray"/>
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/enterPassword"
                android:textColorHint="@color/white"
                app:endIconTint="@color/white"
                app:boxBackgroundColor="@color/gray"
                app:boxStrokeWidth="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPassword"
                    android:inputType="textPassword"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    app:boxBackgroundColor="@color/gray"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/confirmPassword"
                android:textColorHint="@color/white"
                app:endIconTint="@color/white"
                app:boxBackgroundColor="@color/gray"
                app:boxStrokeWidth="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtConfirmPassword"
                    android:inputType="textPassword"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    app:boxBackgroundColor="@color/gray"/>
            </com.google.android.material.textfield.TextInputLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">

                <Button
                    android:id="@+id/register"
                    android:width="160dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:layout_marginEnd="3dp"
                    android:text="@string/register"/>

                <Button
                    android:id="@+id/cancel"
                    android:width="140dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:layout_marginStart="3dp"
                    android:text="@string/cancel"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>